--- a/assets/GameOfLife/styles.css
+++ b/assets/GameOfLife/styles.css
@@ -12,7 +12,7 @@
 
 #header {
 	position: relative;
-	width: 100%;
+	width: 480px;
 	margin: auto;
 	text-align: center;
 }
@@ -26,7 +26,7 @@
   	margin:0;
   	padding:0;
   	border:none;
-  	outline:1px solid #fff;
+  	outline:1px solid #000;
   	display:inline-block;
   }
 }
@@ -34,16 +34,15 @@
 	margin:0;
 	padding:0;
 	border:none;
-	outline:1px solid #fff;
+	outline:1px solid #000;
 	display:inline-block;
-	cursor: pointer
 }
 
 .gridoff {
 	margin:0;
 	padding:0;
 	border:none;
-	outline:1px solid #fff;
+	outline:1px solid #000;
 	display:inline-block;
 }
 
@@ -51,7 +50,7 @@
   margin:0;
 	padding:0;
 	border:none;
-	outline:1px solid #fff;
+	outline:1px solid #000;
 	display:inline-block;
-  background-color: white;
+  background-color: black;
 }
