--- a/assets/GameOfLife/styles.css
+++ b/assets/GameOfLife/styles.css
@@ -26,7 +26,7 @@
   	margin:0;
   	padding:0;
   	border:none;
-  	outline:1px solid #000;
+  	outline:1px solid #fff;
   	display:inline-block;
   }
 }
@@ -34,7 +34,7 @@
 	margin:0;
 	padding:0;
 	border:none;
-	outline:1px solid #000;
+	outline:1px solid #fff;
 	display:inline-block;
 }
 
@@ -50,7 +50,7 @@
   margin:0;
 	padding:0;
 	border:none;
-	outline:1px solid #000;
+	outline:1px solid #fff;
 	display:inline-block;
-  background-color: black;
+  background-color: white;
 }
