--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ a:hover {
   border-bottom: solid white 1px;
 }
 .about #about {
-  padding-left: 100px;
+  /* padding-left: 100px; */
   font-size: 2em;
 }
 .about .profile {
@@ -82,6 +82,10 @@ a:hover {
 }
 .about p {
   text-indent: 1em;
+}
+#projects{
+  padding-bottom: 20px;
+  border-bottom: 1px white solid;
 }
 
 #canvas1{
